# smiles_2025_sgnn

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  playground.ipynb  pyproject.toml  run.sh
conf/: config.yaml
scripts/: 0_prepare_data.sh  1_run_graphs_training.sh  2_run_boosting.sh  3_expand_features.sh  README.md
sgnn/: expand_features.py  model.py  node_features_utils.py  obtain_data.py  preprocessing.py  sparsify_utils.py  train_xgboost.py  trainer.py  utils.py
