[project]
name = "synolitic-gnn"
version = "0.1.0"
description = "Overcoming the Curse of Dimensionality with Synolitic AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "optuna>=4.5.0",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
    "torch-geometric>=2.7.0",
    "tqdm>=4.67.1",
    "xgboost>=3.1.1",
]

[dependency-groups]
dev = [
    "prek>=0.2.11",
    "ruff>=0.14.2",
]
ipython = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.7",
]


[tool.ruff]
line-length = 99
target-version = "py312"
unsafe-fixes = true
src = ["sgnn/*"]

[tool.ruff.lint]
preview = true
extend-select = [
    "A",
    "ARG",
    "ASYNC",
    "B",
    "C4",
    "C90",
    # "COM",
    # "D",
    # "DOC",
    "DTZ",
    "E",
    "F",
    "FAST",
    "FURB",
    "I",
    "INP",
    "INT",
    "LOG",
    "N",
    "NPY",
    "PD",
    "PL",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "PTH",
    "Q",
    "RET",
    "RSE",
    # "RUF",
    "S",
    "SIM",
    "SLF",
    "SLOT",
    "TD",
    "TID",
    "UP",
    "W",
]
ignore = ["TD003"]

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ["F", "X_*", "G"]

[tool.ruff.lint.pylint]
max-args = 16
max-locals = 32
